--- a/style.css
+++ b/style.css
@@ -9,10 +9,6 @@
   --navColor5: #2c8437;
 }
 
-html {
-  box-sizing: border-box;
-}
-
 body {
   margin: 0;
   background: #000;
@@ -217,9 +213,12 @@ nav li:nth-of-type(5) {
 /* --- Sections ------------------------------------ */
 
 section {
+  box-sizing: border-box;
   width: 100%;
   height: 100vh;
   position: relative;
+  padding-left: 20px;
+  padding-right: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -235,6 +234,7 @@ section#home {
 }
 
 section#home a {
+  
   position: absolute;
   z-index: 2;
   top: 1.5rem;
